// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`negotiation rounds — batched vendor lookups + active-all tenant gate GET /rounds/:rfq_id returns the same body as before 1`] = `
{
  "data": [
    {
      "approved_at": null,
      "arc_item_id": null,
      "assigned_vendors": [
        {
          "company_name": "Alpha Vendor Pvt Ltd",
          "email": "alpha@vendor.test",
          "id": "<id#2>",
          "name": "Alpha Vendor Contact",
          "organization_name": null,
        },
        {
          "company_name": "Beta Vendor Pvt Ltd",
          "email": "beta@vendor.test",
          "id": "<id#3>",
          "name": "Beta Vendor Contact",
          "organization_name": null,
        },
      ],
      "closed_at": null,
      "created_at": "<ts#2>",
      "created_by": 80011,
      "created_by_email": "a1.proc.buyer@test.local",
      "created_by_name": "A1 Proc Buyer",
      "end_date": "<ts#1>",
      "id": "<id#1>",
      "product_name": "7 UP PEPSI 1.5 LTR",
      "product_names": [
        {
          "product_name": "7 UP PEPSI 1.5 LTR",
          "rfq_product_id": "<rfq_product_id#1>",
        },
      ],
      "products": null,
      "published_at": null,
      "remarks": null,
      "rfq_id": "<rfq_id#1>",
      "rfq_product_id": "<rfq_product_id#1>",
      "round_number": 1,
      "source_id": "<source_id#1>",
      "source_type": "RFQ",
      "status": "CLOSED",
      "target_price": "90.00",
      "updated_at": "<ts#2>",
      "vendor_approvals": [],
      "vendor_ids": [
        "<vendor_ids#1>",
        "<vendor_ids#2>",
      ],
    },
    {
      "approved_at": null,
      "arc_item_id": null,
      "assigned_vendors": [
        {
          "company_name": "Alpha Vendor Pvt Ltd",
          "email": "alpha@vendor.test",
          "id": "<id#2>",
          "name": "Alpha Vendor Contact",
          "organization_name": null,
        },
        {
          "company_name": "Beta Vendor Pvt Ltd",
          "email": "beta@vendor.test",
          "id": "<id#3>",
          "name": "Beta Vendor Contact",
          "organization_name": null,
        },
      ],
      "closed_at": null,
      "created_at": "<ts#4>",
      "created_by": 80011,
      "created_by_email": "a1.proc.buyer@test.local",
      "created_by_name": "A1 Proc Buyer",
      "end_date": "<ts#3>",
      "id": "<id#4>",
      "product_name": "7 UP PEPSI 330 ML",
      "product_names": [
        {
          "product_name": "7 UP PEPSI 330 ML",
          "rfq_product_id": "<rfq_product_id#2>",
        },
      ],
      "products": null,
      "published_at": null,
      "remarks": null,
      "rfq_id": "<rfq_id#1>",
      "rfq_product_id": "<rfq_product_id#2>",
      "round_number": 1,
      "source_id": "<source_id#1>",
      "source_type": "RFQ",
      "status": "CLOSED",
      "target_price": "90.00",
      "updated_at": "<ts#4>",
      "vendor_approvals": [],
      "vendor_ids": [
        "<vendor_ids#1>",
        "<vendor_ids#2>",
      ],
    },
    {
      "approved_at": null,
      "arc_item_id": null,
      "assigned_vendors": [
        {
          "company_name": "Alpha Vendor Pvt Ltd",
          "email": "alpha@vendor.test",
          "id": "<id#2>",
          "name": "Alpha Vendor Contact",
          "organization_name": null,
        },
        {
          "company_name": "Beta Vendor Pvt Ltd",
          "email": "beta@vendor.test",
          "id": "<id#3>",
          "name": "Beta Vendor Contact",
          "organization_name": null,
        },
      ],
      "closed_at": null,
      "created_at": "<ts#6>",
      "created_by": 80011,
      "created_by_email": "a1.proc.buyer@test.local",
      "created_by_name": "A1 Proc Buyer",
      "end_date": "<ts#5>",
      "id": "<id#5>",
      "product_name": "7 UP PEPSI 330 ML",
      "product_names": [
        {
          "product_name": "7 UP PEPSI 330 ML",
          "rfq_product_id": "<rfq_product_id#2>",
        },
      ],
      "products": null,
      "published_at": null,
      "remarks": null,
      "rfq_id": "<rfq_id#1>",
      "rfq_product_id": "<rfq_product_id#2>",
      "round_number": 2,
      "source_id": "<source_id#1>",
      "source_type": "RFQ",
      "status": "ACTIVE",
      "target_price": "90.00",
      "updated_at": "<ts#6>",
      "vendor_approvals": [],
      "vendor_ids": [
        "<vendor_ids#1>",
        "<vendor_ids#2>",
      ],
    },
  ],
  "status": 1,
  "vendors": {
    "<rfq_product_id#1>": [
      {
        "active_round_id": null,
        "active_round_number": null,
        "active_round_status": null,
        "company_name": "Alpha Vendor Pvt Ltd",
        "email": "alpha@vendor.test",
        "id": "<id#2>",
        "in_active_round": false,
        "name": "Alpha Vendor Contact",
        "organization_name": null,
      },
      {
        "active_round_id": null,
        "active_round_number": null,
        "active_round_status": null,
        "company_name": "Beta Vendor Pvt Ltd",
        "email": "beta@vendor.test",
        "id": "<id#3>",
        "in_active_round": false,
        "name": "Beta Vendor Contact",
        "organization_name": null,
      },
    ],
    "<rfq_product_id#2>": [
      {
        "active_round_id": "<active_round_id#1>",
        "active_round_number": 2,
        "active_round_status": "ACTIVE",
        "company_name": "Alpha Vendor Pvt Ltd",
        "email": "alpha@vendor.test",
        "id": "<id#2>",
        "in_active_round": true,
        "name": "Alpha Vendor Contact",
        "organization_name": null,
      },
      {
        "active_round_id": "<active_round_id#1>",
        "active_round_number": 2,
        "active_round_status": "ACTIVE",
        "company_name": "Beta Vendor Pvt Ltd",
        "email": "beta@vendor.test",
        "id": "<id#3>",
        "in_active_round": true,
        "name": "Beta Vendor Contact",
        "organization_name": null,
      },
    ],
  },
}
`;

exports[`negotiation rounds — batched vendor lookups + active-all tenant gate GET /rounds/:rfq_id?rfq_product_id= returns the same body as before 1`] = `
{
  "data": [
    {
      "approved_at": null,
      "arc_item_id": null,
      "assigned_vendors": [
        {
          "company_name": "Alpha Vendor Pvt Ltd",
          "email": "alpha@vendor.test",
          "id": "<id#2>",
          "name": "Alpha Vendor Contact",
          "organization_name": null,
        },
        {
          "company_name": "Beta Vendor Pvt Ltd",
          "email": "beta@vendor.test",
          "id": "<id#3>",
          "name": "Beta Vendor Contact",
          "organization_name": null,
        },
      ],
      "closed_at": null,
      "created_at": "<ts#2>",
      "created_by": 80011,
      "created_by_email": "a1.proc.buyer@test.local",
      "created_by_name": "A1 Proc Buyer",
      "end_date": "<ts#1>",
      "id": "<id#1>",
      "product_name": "7 UP PEPSI 330 ML",
      "product_names": [
        {
          "product_name": "7 UP PEPSI 330 ML",
          "rfq_product_id": "<rfq_product_id#1>",
        },
      ],
      "products": null,
      "published_at": null,
      "remarks": null,
      "rfq_id": "<rfq_id#1>",
      "rfq_product_id": "<rfq_product_id#1>",
      "round_number": 1,
      "source_id": "<source_id#1>",
      "source_type": "RFQ",
      "status": "CLOSED",
      "target_price": "90.00",
      "updated_at": "<ts#2>",
      "vendor_approvals": [],
      "vendor_ids": [
        "<vendor_ids#1>",
        "<vendor_ids#2>",
      ],
    },
    {
      "approved_at": null,
      "arc_item_id": null,
      "assigned_vendors": [
        {
          "company_name": "Alpha Vendor Pvt Ltd",
          "email": "alpha@vendor.test",
          "id": "<id#2>",
          "name": "Alpha Vendor Contact",
          "organization_name": null,
        },
        {
          "company_name": "Beta Vendor Pvt Ltd",
          "email": "beta@vendor.test",
          "id": "<id#3>",
          "name": "Beta Vendor Contact",
          "organization_name": null,
        },
      ],
      "closed_at": null,
      "created_at": "<ts#4>",
      "created_by": 80011,
      "created_by_email": "a1.proc.buyer@test.local",
      "created_by_name": "A1 Proc Buyer",
      "end_date": "<ts#3>",
      "id": "<id#4>",
      "product_name": "7 UP PEPSI 330 ML",
      "product_names": [
        {
          "product_name": "7 UP PEPSI 330 ML",
          "rfq_product_id": "<rfq_product_id#1>",
        },
      ],
      "products": null,
      "published_at": null,
      "remarks": null,
      "rfq_id": "<rfq_id#1>",
      "rfq_product_id": "<rfq_product_id#1>",
      "round_number": 2,
      "source_id": "<source_id#1>",
      "source_type": "RFQ",
      "status": "ACTIVE",
      "target_price": "90.00",
      "updated_at": "<ts#4>",
      "vendor_approvals": [],
      "vendor_ids": [
        "<vendor_ids#1>",
        "<vendor_ids#2>",
      ],
    },
  ],
  "status": 1,
  "vendors": {
    "<rfq_product_id#1>": [
      {
        "active_round_id": "<active_round_id#1>",
        "active_round_number": 2,
        "active_round_status": "ACTIVE",
        "company_name": "Alpha Vendor Pvt Ltd",
        "email": "alpha@vendor.test",
        "id": "<id#2>",
        "in_active_round": true,
        "name": "Alpha Vendor Contact",
        "organization_name": null,
      },
      {
        "active_round_id": "<active_round_id#1>",
        "active_round_number": 2,
        "active_round_status": "ACTIVE",
        "company_name": "Beta Vendor Pvt Ltd",
        "email": "beta@vendor.test",
        "id": "<id#3>",
        "in_active_round": true,
        "name": "Beta Vendor Contact",
        "organization_name": null,
      },
    ],
  },
}
`;
